--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,26 @@
 			<artifactId>payment</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+		<!-- iText for PDF generation -->
+	   
+	<dependency>
+		    <groupId>com.itextpdf</groupId>
+		    <artifactId>itext7-core</artifactId>
+		    <version>7.2.0</version>
+		    <type>pom</type>
+		</dependency>
+	
+	    <!-- ZXing for QR code generation -->
+	    <dependency>
+	        <groupId>com.google.zxing</groupId>
+	        <artifactId>core</artifactId>
+	        <version>3.3.3</version>
+	    </dependency>
+    <dependency>
+        <groupId>com.google.zxing</groupId>
+        <artifactId>javase</artifactId>
+        <version>3.3.3</version>
+    </dependency>
 	</dependencies>
 
 	<build>
